--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon app.js",
+    "build":"echo sucess",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Deepak Jose",
